# simple-uart-reader

./: CMakeLists.txt  README.md  package.xml
src/: example_read_data.cpp  serial_tx_rx_pkg_node.cpp
